--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.9",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.34",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "swiper": "8.3.1"
+    "swiper": "8.3.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
