--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.9",
+    "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
     "node-sass": "^7.0.1",
